syntax = "proto3";

option csharp_namespace = "UserRegistrationService";

service GrpcUserService{
    rpc UserExists (UserRequest) returns (UserResponse);
}

message UserRequest{
    string Id = 1;
}

message UserResponse{
    string result = 1;
}